[tool.poetry]
name = "study-wsgi"
version = "0.1.0"
description = ""
authors = ["Ilya Zhalnin <mr.ilay333@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
WebOb = "^1.8.7"
parse = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
